# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "veil-toolkit"
description = "Composable component library for Veil pipelines: recognizers, dedup layers, checks, redaction strategies"
keywords = ["veil", "toolkit", "components", "pipeline"]
categories = ["data-structures"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
veil-core = { workspace = true, features = [] }

# Primitive datatypes
uuid = { workspace = true, features = [] }
type-map = { workspace = true, features = [] }

# Async runtime and parallelism
tokio = { workspace = true, features = ["rt", "sync", "macros"] }

# Observability
tracing = { workspace = true, features = [] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
